--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
@@ -31,8 +32,9 @@
     ></script>
   </head>
   <body>
-    <h1>Hello</h1>
-    <p>Hello I am sarah!</p>
-    <i class="fab fa-instagram"></i>
+    <p>Hi, I am</p>
+    <h1>Sarah Whibley</h1>
+    <h2>Front-end developer based in Toronto, Canada</h2>
+    <a href="#" class="btn btn-branding">Contact Me </a>
   </body>
 </html>
