--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     ></script>
   </head>
   <body>
-    <p>Hi, I am</p>
-    <h1>Sarah Whibley</h1>
-    <h2>Front-end developer based in Toronto, Canada</h2>
-    <a href="#" class="btn btn-branding">Contact Me </a>
+    <div class="hero">
+      <p>Hi, I am</p>
+      <h1>Sarah Whibley</h1>
+      <h2>Front-end developer based in Toronto, Canada</h2>
+      <a href="#" class="btn btn-branding">Contact Me </a>
+    </div>
   </body>
 </html>
