--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Sarah Whibley</h1>
-      <h2>Front-end developer based in Toronto, Canada</h2>
-      <a href="#" class="btn btn-branding">Contact Me </a>
+      <h2 class="mb-5">Front-end developer based in Toronto, Canada</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact Me </a>
+      </div>
     </div>
   </body>
 </html>
