--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Project</title>
+    <meta
+      name="description"
+      content="The portfolio shown showcases a variety of SheCodes projects completed by Sarah Whibley, using CSS, JavaScript and HTML"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -28,8 +31,41 @@
       src="https://kit.fontawesome.com/d048515449.js"
       crossorigin="anonymous"
     ></script>
+    <title>Sarah Whibley - SheCodes Portfolio Project</title>
   </head>
   <body>
+      <nav class="navbar navbar-expand-lg navbar-light">
+<div class="container">
+<a class="navbar-brand" href="/">SW</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="toggle navigation"> 
+    <span class="navbar-toggle-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+</div>
+
+
+      </nav>
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Sarah Whibley</h1>
