--- a/index.html
+++ b/index.html
@@ -60,14 +60,10 @@
         </div>
       </div>
     </nav>
-
-
 </div>
-
-
       </nav>
     <div class="hero">
-      <p>👋 Hello, I'm</p>
+      <p>Hello, I'm</p>
       <h1>Sarah Whibley</h1>
       <h2 class="mb-5">Front-end developer based in Toronto, Canada</h2>
       <div>
@@ -75,7 +71,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-      Here are some featured projects I have worked on
+      Recent Projects
     </p>
     <div class="container">
       <div class="row mb-5">
