--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p>Coded by Sarah Clair Whibley</p>
+      <p>Coded by Sarah Whibley</p>
     </footer>
   </body>
 </html>
