--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-      Recent Projects
+      Featured Projects - Completed by Sarah Whibley
     </p>
     <div class="container">
       <div class="row mb-5">
