--- a/about.html
+++ b/about.html
@@ -64,6 +64,22 @@
       </nav>
 
 <h1>About Me</h1>
+<footer class="mt-4">
+      <a href="https://github.com/swhibley12/Portfolio.git" target="_blank" title="Github"
+        ><i class="fab fa-github"></i
+      ></a>
+      <a
+        href="www.linkedin.com/in/sarah-whibley-a52349216"
+        target="_blank"
+        title="Linkedin"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+      <a href="mailto:swhibley12@gmail.com" target="_blank" title="Email"
+        ><i class="fas fa-envelope"></i
+      ></a>
+
+      <p>Coded by Sarah Whibley</p>
+    </footer>
 
       </body>
       </html>
