--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1>Sarah Whibley</h1>
       <h2 class="mb-5">Front-end developer based in Toronto, Canada</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Portfolio Link">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
