--- a/index.html
+++ b/index.html
@@ -76,21 +76,15 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/beauty.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Sustainable Beauty Project</h2>
             <p class="mb-4 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
+             While completing SheCodes Basics, students completed a landing page of their choosing to showcase skills gained in the workshop. Being one of my initial attempts with coding, I focused on a topic that I am passionate about - sustainable beauty. This project was a great way to exercise CSS, HTML, and JavaScript skills, while having the opportunity to focus on a topic of our choosing!
             </p>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-60f13649-dc6d-4b55-9766-fecefc98bb8b/projects/403760" target="_blank" class="btn btn-branding-outline" title="Project link">Learn More</a>
           </div>
         </div>
       </div>
