added image updated index

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-plus-1d3e61b4-c814-419a-96d9-ba8eff42c84c/projects/479039" target="_blank" class="btn btn-branding-outline" title="Weather App Link">Learn More</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weather-app.png" class="img-fluid" alt="" />
         </div>
       </div>
       <div class="row">
