updated css and index

--- a/index.html
+++ b/index.html
@@ -93,13 +93,7 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App Project</h2>
             <p class="mb-4 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
+              This weather app displays real-time weather forecasts and current conditions about a given location. The weather application gives detail reports including temperature, current conditions, humidity and wind forecast, and more. 
             </p>
             <a href="https://www.shecodes.io/workshops/shecodes-plus-1d3e61b4-c814-419a-96d9-ba8eff42c84c/projects/479039" target="_blank" class="btn btn-branding-outline" title="Weather App Link">Learn More</a>
           </div>
@@ -114,7 +108,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary Project</h2>
+            <h2 class="mb-5">Portfolio Project</h2>
             <p class="mb-4 text-muted">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
