updated portfolio, deleted image

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/portfolio.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -118,7 +118,7 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <a href="" class="btn btn-branding-outline">Learn More</a>
+            <a href="/" class="btn btn-branding-outline" title="Portfolio link">Learn More</a>
           </div>
         </div>
       </div>
