--- a/index.html
+++ b/index.html
@@ -110,13 +110,7 @@
           <div class="project-description">
             <h2 class="mb-5">Portfolio Project</h2>
             <p class="mb-4 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
+              The Portfolio project showcases skills gained and projects completed in various SheCodes workshops, including: SheCodes Basics, SheCodes Plus, and SheCodes Responsive.
             </p>
             <a href="/" class="btn btn-branding-outline" title="Portfolio link">Learn More</a>
           </div>
