--- a/about.html
+++ b/about.html
@@ -64,17 +64,17 @@
       </nav>
 <div class="about-section container">
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="about-section-content">
 <h1 class="mb-4">Hi, I am Sarah Whibley! </h1>
 <h2 class="mb-4">Front-end Developer, based in Canada </h2>
-<p class="mb-4">
+<p class="mb-5">
     I started coding in July 2021, with the help of SheCodes Workshops! I had some experience coding while completing my undergraduate degree at Queen's University, however, it wasn't until this summer that I was really able to enhance my skills and learn new material. For those who may be interested in coding, I definitely recommend SheCodes! Please click the "Work" tab above to see some of the projects I have been working on.  
 </p>
 <a href="" class="btn btn-branding">View my projects</a>
 </div>
 </div>
-<div class="col-6">
+<div class="col-md-6">
 <img src="images/sarah.jpeg" alt="" class="img-fluid" />
 </div>
 </div> 
