updated css for about me page

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       </nav>
 <div class="about-section container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="about-section-content">
 <h1 class="mb-4">Hi, I am Sarah Whibley! </h1>
 <h2 class="mb-4">Front-end Developer, based in Canada </h2>
@@ -74,7 +74,7 @@
 <a href="" class="btn btn-branding">View my projects</a>
 </div>
 </div>
-<div class="col-md-6">
+<div class="col-lg-6">
 <img src="images/sarah.jpeg" alt="" class="img-fluid" />
 </div>
 </div> 
