--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
         <div class="col-lg-6">
             <div class="about-section-content">
 <h1 class="mb-4">Hi, I am Sarah Whibley! </h1>
-<h2 class="mb-4">Front-end Developer, based in Canada </h2>
+<h2 class="mb-4">Front-end Developer, based in Canada. </h2>
 <p class="mb-5">
     I started coding in July 2021, with the help of SheCodes Workshops! I had some experience coding while completing my undergraduate degree at Queen's University, however, it wasn't until this summer that I was really able to enhance my skills and learn new material. For those who may be interested in coding, I definitely recommend SheCodes! Please click the "Work" tab above to see some of the projects I have been working on.  
 </p>
