--- a/about.html
+++ b/about.html
@@ -62,10 +62,10 @@
     </nav>
 </div>
       </nav>
-<div class="about-section container">
+<div class="content-container container">
     <div class="row">
         <div class="col-lg-6">
-            <div class="about-section-content">
+            <div class="content">
 <h1 class="mb-4">Hi, I am Sarah Whibley! </h1>
 <h2 class="mb-4">Front-end Developer, based in Canada. </h2>
 <p class="mb-5">
