--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,31 @@
     </nav>
 </div>
       </nav>
+<div class="content-container container">
+            <div class="content">
+<h1 class="mb-5">Take a look at what I've been working on! </h1>
 
-<h1 class="mt-5">My Projects</h1>
+<div class="row">
+    <div class="col-md-6 mb-4">
+        <img src="images/beauty.png" class="img-fluid mb-3 rounded" alt="" />
+        <h3 class="text-center m-0">Sustainable Beauty Project</h3>
+        <p class="text-center text-muted">Built with HTML and CSS</p>
+    </div>
+    <div class="col-md-6 mb-4">
+        <img src="images/weather-app.png" class="img-fluid mb-3 rounded" alt="" />
+        <h3 class="text-center m-0">Weather App Project</h3>
+        <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
+    </div>
+    <div class="col-md-6 mb-4">
+        <img src="images/portfolio.png" class="img-fluid mb-3 rounded" alt="" />
+        <h3 class="text-center m-0">Portfolio Project</h3>
+        <p class="text-center text-muted">Built with HTML, CSS, and Javascript</p>
+    </div>
+</div>
+
+</div>
+</div>
+</div>
 
 <footer class="mt-4">
       <a href="https://github.com/swhibley12/Portfolio.git" target="_blank" title="Github"
