added contact page

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,22 @@
 </div>
       </nav>
 
-      <h1 class="m-5">Contact Me!</h1>
+      <div class="content-container container">
+        <div class="content">
+      <h1 class="m-5">Let's get in touch!</h1>
+      <h3>Email</h3>
+      <p>
+        <a href="mailto:swhibley12@gmail.com">swhibley12@gmail.com </a>
+      </p>
+      <h3>Instagram</h3>
+      <p>
+        <a href="https://wwww.instagram.com/swhibley" target="_blank">@swhibley</a></p>
+      <h3>Twitter</h3>
+      <p>
+        <a href="https:/www.twitter.com/scww_" target="_blank"> @scww_ </a></p>
+</div>
+</div>
+
 
       <footer class="mt-4">
  <a href="https://github.com/swhibley12/Portfolio.git" target="_blank" title="Github"
