--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
       </p>
       <h3>Instagram</h3>
       <p>
-        <a href="https://wwww.instagram.com/swhibley" target="_blank">@swhibley</a></p>
+        <a href="https://wwww.instagram.com/swhibley_" target="_blank">@swhibley_</a></p>
       <h3>Twitter</h3>
       <p>
         <a href="https:/www.twitter.com/scww_" target="_blank"> @scww_ </a></p>
