--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,10 @@
       </p>
       <h3>Instagram</h3>
       <p>
-        <a href="https://wwww.instagram.com/swhibley_" target="_blank">@swhibley_</a></p>
+        <a href="https://wwww.instagram.com/swhibley_/" target="_blank">@swhibley_</a></p>
       <h3>Twitter</h3>
       <p>
-        <a href="https:/www.twitter.com/scww_" target="_blank"> @scww_ </a></p>
+        <a href="https:/www.twitter.com/scww_/" target="_blank"> @scww_ </a></p>
 </div>
 </div>
 
