--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,9 @@
       <h3>Instagram</h3>
       <p>
         <a href="https://wwww.instagram.com/swhibley_/" target="_blank">@swhibley_</a></p>
-      <h3>Twitter</h3>
+      <h3>LinkedIn</h3>
       <p>
-        <a href="https:/www.twitter.com/scww_" target="_blank"> @scww_ </a></p>
+        <a href="www.linkedin.com/in/sarah-whibley-a52349216" target="_blank"> Sarah Whibley - LinkedIn</a></p>
 </div>
 </div>
 
