--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
     </div>
 
     <footer class="mt-4">
+        <div class="contact-box d-flex justify-content-between mb-5">
+            <div>
+<h4>Work Inquiry</h4>
+<p class="text-muted">Let's work together</p>
+</div>
+<div>
+<a href="" class="btn btn-branding">
+    Contact Me
+</a>
+</div>
+        </div>
       <a href="https://github.com/swhibley12/Portfolio.git" target="_blank" title="Github"
         ><i class="fab fa-github"></i
       ></a>
