--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 
     <footer class="mt-4">
-        <div class="contact-box d-flex justify-content-between mb-5">
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
             <div>
 <h4>Work Inquiry</h4>
 <p class="text-muted">Let's work together</p>
