--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <p class="text-muted">Let's work together</p>
 </div>
 <div>
-<a href="" class="btn btn-branding">
+<a href="" class="btn btn-branding mt-3">
     Contact Me
 </a>
 </div>
