--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,18 @@
 <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Page">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">Work</a>
+              <a class="nav-link" href="/portfolio.html" title="Sarah's Work">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Sarah's Contact Information">Contact</a>
             </li>
           </ul>
         </div>
@@ -94,7 +94,9 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p>Coded by Sarah Whibley</p>
+      <p class="text-center mt-5">This project was coded by Sarah Whibley, and it is
+        <a href="https://github.com/swhibley12/Portfolio" target="_blank">  
+        open-sourced</a></p>
     </footer>
 
 
