--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About page">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">Work</a>
+              <a class="nav-link" href="/portfolio.html" title="Sarah's Work">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Sarah's Contact Information">Contact</a>
             </li>
           </ul>
         </div>
@@ -84,7 +84,7 @@
             <p class="mb-4 text-muted">
              While completing SheCodes Basics, students completed a landing page of their choosing to showcase skills gained in the workshop. Being one of my initial attempts with coding, I focused on a topic that I am passionate about - sustainable beauty. This project was a great way to exercise CSS, HTML, and JavaScript skills, while having the opportunity to focus on a topic of our choosing!
             </p>
-            <a href="https://www.shecodes.io/workshops/shecodes-basics-60f13649-dc6d-4b55-9766-fecefc98bb8b/projects/403760" target="_blank" class="btn btn-branding-outline" title="Project link">Learn More</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-60f13649-dc6d-4b55-9766-fecefc98bb8b/projects/403760" target="_blank" class="btn btn-branding-outline" alt="Sustainable Beauty Project preview"  title="Project link">Learn More</a>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
             <p class="mb-4 text-muted">
               This weather app displays real-time weather forecasts and current conditions about a given location. The weather application gives detail reports including temperature, current conditions, humidity and wind forecast, and more. 
             </p>
-            <a href="https://www.shecodes.io/workshops/shecodes-plus-1d3e61b4-c814-419a-96d9-ba8eff42c84c/projects/479039" target="_blank" class="btn btn-branding-outline" title="Weather App Link">Learn More</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-plus-1d3e61b4-c814-419a-96d9-ba8eff42c84c/projects/479039" target="_blank" alt="Weather project preview" class="btn btn-branding-outline" title="Weather App Link">Learn More</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -112,7 +112,7 @@
             <p class="mb-4 text-muted">
               The Portfolio project showcases skills gained and projects completed in various SheCodes workshops, including: SheCodes Basics, SheCodes Plus, and SheCodes Responsive. 
             </p>
-            <a href="/" class="btn btn-branding-outline" title="Portfolio link">Learn More</a>
+            <a href="/" class="btn btn-branding-outline" alt="Portfiolio project preview" title="Portfolio link">Learn More</a>
           </div>
         </div>
       </div>
@@ -121,11 +121,11 @@
     <footer class="mt-4">
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
             <div>
-<h4>Work Inquiry</h4>
+<h3>Work Inquiry</h3>
 <p class="text-muted">Let's work together</p>
 </div>
 <div>
-<a href="" class="btn btn-branding mt-3">
+<a href="/contact.html" class="btn btn-branding mt-3" title="Contact Sarah">
     Contact Me
 </a>
 </div>
@@ -143,7 +143,9 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p>Coded by Sarah Whibley</p>
+      <p class="text-center mt-5">This project was coded by Sarah Whibley, and it is
+        <a href="https://github.com/swhibley12/Portfolio" target="_blank">  
+        open-sourced</a></p>
     </footer>
   </body>
 </html>
