--- a/about.html
+++ b/about.html
@@ -93,9 +93,11 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p class="text-center mt-5"> ✌🏼This project was coded by Sarah Whibley, and it is
+      <p class="text-center mt-5">This project was coded by Sarah Whibley, and it is
         <a href="https://github.com/swhibley12/Portfolio" target="_blank">  
-        open-sourced</a></p>
+        open-sourced
+    </a>
+</p>
     </footer>
 
       </body>
