--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 
       <p class="text-center mt-5">This project was coded by Sarah Whibley, and it is
         <a href="https://github.com/swhibley12/Portfolio" target="_blank">  
-        open-sourced</a></p>
+        open-sourced
+    </a>
+</p>
     </footer>
   </body>
 </html>
