--- a/index.html
+++ b/index.html
@@ -142,12 +142,16 @@
       <a href="mailto:swhibley12@gmail.com" target="_blank" title="Email"
         ><i class="fas fa-envelope"></i
       ></a>
-
-      <p class="text-center mt-5">This project was coded by Sarah Whibley, and it is
-        <a href="https://github.com/swhibley12/Portfolio" target="_blank">  
-        open-sourced
-    </a>
-</p>
+<p class="text-center mt-5">
+        This website was coded by Sarah Whibley, and is
+        <a
+          href="https://github.com/swhibley12/Portfolio"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
     </footer>
   </body>
 </html>
+
