--- a/about.html
+++ b/about.html
@@ -98,11 +98,9 @@
         <a
           href="https://github.com/swhibley12/Portfolio"
           target="_blank"
-        >
-          open-sourced
+        >open-sourced
         </a>
       </p>
     </footer>
-
       </body>
       </html>
