--- a/index.html
+++ b/index.html
@@ -143,13 +143,12 @@
         ><i class="fas fa-envelope"></i
       ></a>
 <p class="text-center mt-5">
-        This website was coded by Sarah Whibley, and is
+        This website was coded by Sarah Whibley, and it is
         <a
           href="https://github.com/swhibley12/Portfolio"
+         title="github repository"
           target="_blank"
-        >
-          open-sourced
-        </a>
+        >open-source</a>
       </p>
     </footer>
   </body>
