--- a/portfolio.html
+++ b/portfolio.html
@@ -103,13 +103,12 @@
       ></a>
 
       <p class="text-center mt-5">
-        This website was coded by Sarah Whibley, and is
+        This website was coded by Sarah Whibley, and it is
         <a
           href="https://github.com/swhibley12/Portfolio"
+          title="Github repository"
           target="_blank"
-        >
-          open-sourced
-        </a>
+        >open-sourced</a>
       </p>
     </footer>
 </body>
