--- a/contact.html
+++ b/contact.html
@@ -94,13 +94,13 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-     <p class="text-center mt-5">
+     <p class="text-center">
         This website was coded by Sarah Whibley, and it is
         <a
           href="https://github.com/swhibley12/Portfolio"
            title="github repository"
           target="_blank"
-        >open-sourced</a>
+        >open-source</a>
       </p>
       </footer>
   </body>
