--- a/index.html
+++ b/index.html
@@ -142,14 +142,8 @@
       <a href="mailto:swhibley12@gmail.com" target="_blank" title="Email"
         ><i class="fas fa-envelope"></i
       ></a>
-<p class="text-center mt-5">
-        This website was coded by Sarah Whibley, and it is
-        <a
-          href="https://github.com/swhibley12/Portfolio"
-         title="github repository"
-          target="_blank"
-        >open-source</a>
-      </p>
+<p class="text-center">
+        This website was coded by Sarah Whibley</p>
     </footer>
   </body>
 </html>
