--- a/about.html
+++ b/about.html
@@ -93,13 +93,8 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p class="text-center mt-5">
-        This website was coded by Sarah Whibley, and is
-        <a
-          href="https://github.com/swhibley12/Portfolio"
-          target="_blank"
-        >open-sourced
-        </a>
+      <p class="text-center">
+        This website was coded by Sarah Whibley
       </p>
     </footer>
       </body>
