--- a/portfolio.html
+++ b/portfolio.html
@@ -102,13 +102,8 @@
         ><i class="fas fa-envelope"></i
       ></a>
 
-      <p class="text-center mt-5">
-        This website was coded by Sarah Whibley, and it is
-        <a
-          href="https://github.com/swhibley12/Portfolio"
-          title="Github repository"
-          target="_blank"
-        >open-sourced</a>
+      <p class="text-center">
+        This website was coded by Sarah Whibley
       </p>
     </footer>
 </body>
