--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 <p class="mb-5">
     I started coding in July 2021, with the help of SheCodes Workshops! I had some experience coding while completing my undergraduate degree at Queen's University, however, it wasn't until this summer that I was really able to enhance my skills and learn new material. For those who may be interested in coding, I definitely recommend SheCodes! Please click the "Work" tab above to see some of the projects I have been working on.  
 </p>
-<a href="" class="btn btn-branding">View my projects</a>
+<a href="/portfolio.html" class="btn btn-branding">View my projects</a>
 </div>
 </div>
 <div class="col-lg-6">
