--- a/contact.html
+++ b/contact.html
@@ -95,12 +95,7 @@
       ></a>
 
      <p class="text-center">
-        This website was coded by Sarah Whibley, and it is
-        <a
-          href="https://github.com/swhibley12/Portfolio"
-           title="github repository"
-          target="_blank"
-        >open-source</a>
+        This website was coded by Sarah Whibley
       </p>
       </footer>
   </body>
