Updated About me section

--- a/about.html
+++ b/about.html
@@ -67,9 +67,9 @@
         <div class="col-lg-6">
             <div class="content">
 <h1 class="mb-4">Hi, I am Sarah Whibley! </h1>
-<h2 class="mb-4">Front-end Developer, based in Canada. </h2>
+<h2 class="mb-4">Front-end Developer & Public Health Professional, based in Canada. </h2>
 <p class="mb-5">
-    I started coding in July 2021, with the help of SheCodes Workshops! I had some experience coding while completing my undergraduate degree at Queen's University, however, it wasn't until this summer that I was really able to enhance my skills and learn new material. For those who may be interested in coding, I definitely recommend SheCodes! Please click the button below to see some of the projects that I have been working on.  
+    I started coding in July 2021, with the help of SheCodes Workshops! I had some previous experience with coding while completing my undergraduate degree at Queen's University, however, it wasn't until this summer that I was really able to enhance my coding skills and learn a wide range of new material. I began coding because I am interested in the intersection between health and technology, specifically how health informatics and health information technologies can be used to enhance healthcare equity, quality, and safety for our communities. I hope to combine my Public Health background and expertise with my newly gained front-end development skills to address global and community health challenges, enhance the sustainability and uptake of health technologies in rural and remote settings, and engage stakeholders at the front-end stages of design to better meet the health and wellness needs of community stakeholders.    Please click the button below to see some of the projects that I have been working on.  
 </p>
 <a href="/portfolio.html" class="btn btn-branding">View my projects</a>
 </div>
