--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="hero">
       <p>Hello, I'm</p>
       <h1>Sarah Whibley</h1>
-      <h2 class="mb-5">Front-end developer based in Toronto, Canada</h2>
+      <h2 class="mb-5">Front-end Developer and Public Health Professional based in Toronto, Canada</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Portfolio Link">Contact me</a>
       </div>
