Added dictionary and react weather app photos and added to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,6 +82,16 @@
         <h3 class="text-center m-0">Portfolio Project</h3>
         <p class="text-center text-muted">Built with HTML, CSS, and Javascript</p>
     </div>
+    <div class="col-md-6 mb-4">
+        <img src="images/react-weather.png" class="img-fluid mb-3 rounded" alt="" />
+        <h3 class="text-center m-0">React Weather Forecast Project</h3>
+        <p class="text-center text-muted">Built with React, HTML, CSS, and Javascript</p>
+    </div>
+    <div class="col-md-6 mb-4">
+        <img src="images/dictionary.png" class="img-fluid mb-3 rounded" alt="" />
+        <h3 class="text-center m-0">React Dictionary Project </h3>
+        <p class="text-center text-muted">Built with React, HTML, CSS, and Javascript</p>
+    </div>
 </div>
 
 </div>
