Added weather forecast project to index.html

--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
             <a href="/" class="btn btn-branding-outline" alt="Portfiolio project preview" title="Portfolio link">Learn More</a>
           </div>
         </div>
+        <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">React Weather Forecast Project</h2>
+            <p class="mb-4 text-muted">
+              This React Weather Forecast Project displays real-time weather forecasts and current conditions about a given location. The weather forecast application gives detailed daily weather reports including temperature in fahrenheit and celsius, current conditions, humidity and wind forecast, and more. 
+            </p>
+            <a href="https://fervent-blackwell-3a1428.netlify.app/" target="_blank" alt="React Weather Forecast Project preview" class="btn btn-branding-outline" title="React Weather Forecast Link">Learn More</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/react-weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
       </div>
     </div>
 
