updated index with dictionary project

--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
           <img src="images/react-weather.png" class="img-fluid" alt="" />
         </div>
       </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">React Dictionary Project</h2>
+            <p class="mb-4 text-muted">
+              The React Dictionary Project allows users to search the definition of any English word. In doing so, the application provides the noun, verb, photos of the searched word, and more. 
+            </p>
+            <a href="https://www.shecodes.io/workshops/shecodes-react-1438ed37-7f3e-41c4-9cd5-a395342b99c4/projects/612627" class="btn btn-branding-outline" alt="Dictionary project preview" title="Dictionary link">Learn More</a>
+          </div>
+        </div>
       </div>
     </div>
 
